--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,11 @@ dependencies = [
     "importlib_resources>=1.3.0; python_version < '3.9'",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0",
+]
+
 [project.scripts]
 pyir = "crowelab_pyir:main"
 
@@ -59,3 +64,9 @@ crowelab_pyir = [
     "data/germlines/internal_data/*",
     "data/germlines/internal_data/*/*",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
